fix alignment, closes #682
Closes #682

Merge request studip/studip!1265

--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -7,6 +7,7 @@ $max-width-l: 100%;
 form.default {
     div.select2-wrapper {
         display: block ! important;
+        text-indent: 0;
     }
 
     section {
